[package]
name = "motoc"
description = "Monado Tracking Origin Calibrator"
version = "0.3.5"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
colored = "3.1.1"
ctrlc = { version = "3.5", features = ["termination"] }
env_logger = "0.11"
indicatif = "0.18"
libmonado = "1.6"
log = "0.4"
mint = { version = "0.5", features = ["serde"] }
nalgebra = { version = "0.34", features = ["mint", "serde-serialize"] }
openxr = { version = "0.21", features = [
  "linked",
  "mint",
], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
xdg = "3.0.0"

[build-dependencies]
bindgen = "0.72.1"
